# web-automation-lambdatest-pytest

./: README.md  pyproject.toml
tests/: test_example.py
webAutomationEnv/Scripts/: activate  activate.bat  get_objgraph  undill
